k8s/base/battle-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: battle-service
  namespace: codearena
  labels:
    app: battle-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: battle-service
  template:
    metadata:
      labels:
        app: battle-service
    spec:
      containers:
        - name: battle-service
          image: raj-glitch-max/battle-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
              name: http
          resources:
            requests:
              cpu: 300m
              memory: 512Mi
            limits:
              cpu: 800m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: battle-service
  namespace: codearena
  labels:
    app: battle-service
spec:
  selector:
    app: battle-service
  ports:
    - port: 3002
      targetPort: 3002
      name: http
  type: ClusterIP
